few changes made

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <form name="subForm"  onsubmit="validateForm()">
         <div>FirstName:<input type="text" name="name"></div>
+        <div>LastName:<input type="text" name="lastName"></div>
         <div>Password:<input type="password" name="myPassword"></div>
         <input type="submit" value="register">
     </form>
