--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <form name="subForm"  onsubmit="validateForm()">
         <div>FirstName:<input type="text" name="name"></div>
         <div>Password:<input type="password" name="myPassword"></div>
+        <div>Number:<input type="text" name="num"><span id="numloc"></span></div>
         <input type="submit" value="register">
         
     </form>
