validation for email format

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div>FirstName:<input type="text" name="name"></div>
         <div>Password:<input type="password" name="myPassword"></div>
         <div>Number:<input type="text" name="num"><span id="numloc"></span></div>
+        <div><input type="text" name="email"></div>
         <input type="button" value="register" onclick="validateForm()">
         
     </form>
