--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 
     <form name="subForm"  onsubmit="return false;">
         <div>FirstName:<input type="text" name="name"></div>
-        <div>Password:<input type="password" name="myPassword"></div>
+        <div>Password:<input type="password" name="myPassword" onkeyup="validatePassword()">
+            Strength: <span id="passswordStr">no strength</span>
+        </div>
         <div>Number:<input type="text" name="num"><span id="numloc"></span></div>
-        <div><input type="text" name="email"></div>
+        <div>Email:<input type="text" name="email"></div>
         <input type="button" value="register" onclick="validateForm()">
         
     </form>
